# strongswan

./: .clang-format  .gitignore  configure.ac
scripts/: aes-test.c  bin2array.c  bin2sql.c  crypt_burn.c  dh_speed.c  dnssec.c  fetch.c  hash_burn.c  id2sql.c  key2keyid.c  keyid2sql.c  malloc_speed.c  oid2der.c  pubkey_speed.c  settings-test.c  thread_analysis.c  timeattack.c
src/: Makefile.am
src/_copyright/: _copyright.c
src/aikgen/: aikgen.c
src/charon/: charon.c
src/charon-cmd/: charon-cmd.c
src/charon-nm/: charon-nm.c
src/charon-svc/: charon-svc.c
src/charon-systemd/: charon-systemd.c
src/charon-tkm/src/: charon-tkm.c
src/checksum/: checksum_builder.c
src/conftest/: conftest.c
src/frontends/gnome/auth-dialog/: main.c
src/frontends/osx/charon-xpc/: charon-xpc.c
src/libcharon/: daemon.c
src/libcharon/bus/: bus.c
src/libcharon/encoding/: message.c
src/libcharon/network/: sender.c
src/libimcv/imv/: imv_policy_manager.c
src/libstrongswan/: library.c
src/libstrongswan/crypto/: crypto_tester.c  key_exchange.c
src/libstrongswan/utils/: debug.c  debug.h
src/manager/: main.c
src/medsrv/: main.c
src/pki/: pki.c
src/pool/: pool.c
src/pt-tls-client/: pt-tls-client.c
src/scepclient/: scepclient.c
src/sec-updater/: sec-updater.c
src/starter/: files.h  invokecharon.c  starter.c
src/starter/parser/: lexer.l
src/stroke/: stroke.c
src/swan_sandbox/: .gitignore  Makefile.am  swan_sandbox.c  swan_sandbox_charon.c
src/swanctl/: swanctl.c
src/tpm_extendpcr/: tpm_extendpcr.c
src/xfrmi/: xfrmi.c
(+23 files in other folders)
